# openapi.yml
@@ -1,7 +1,7 @@
-openapi: '3.0.3'
+openapi: 3.0.3
 info:
   title: Mercury
-  version: '0.1.1'
+  version: 0.1.1
 servers:
   - url: http://localhost:8000
     description: Local
@@ -12,30 +12,30 @@ paths:
       summary: Get candidate labels
       description: Get candidate labels for labeling
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LabelMeta'
+                $ref: "#/components/schemas/LabelMeta"
 
   /user/me:
     get:
       summary: Get current user info
       description: Get current user info
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        '401':
+                $ref: "#/components/schemas/User"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
 
@@ -53,18 +53,18 @@ paths:
                   type: string
         required: true
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestMessage'
-        '401':
+                $ref: "#/components/schemas/RequestMessage"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
 
@@ -73,20 +73,20 @@ paths:
       summary: Export labels made by current user
       description: Export labels made by current user
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/LabelData'
-        '401':
+                  $ref: "#/components/schemas/LabelData"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
 
@@ -95,7 +95,7 @@ paths:
       summary: Get task count
       description: Get task count
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -116,14 +116,14 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 oneOf:
-                  - $ref: '#/components/schemas/Task'
-                  - $ref: '#/components/schemas/RequestError'
+                  - $ref: "#/components/schemas/Task"
+                  - $ref: "#/components/schemas/RequestError"
 
   /task/{task_index}/history:
     get:
@@ -136,23 +136,23 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/LabelData'
-        '401':
+                  $ref: "#/components/schemas/LabelData"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
-  
+
   /task/{task_index}/label:
     post:
       summary: Submit a label for a task
@@ -167,20 +167,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Label'
+              $ref: "#/components/schemas/Label"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestMessage'
-        '401':
+                $ref: "#/components/schemas/RequestMessage"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
 
@@ -203,20 +203,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Label'
+              $ref: "#/components/schemas/Label"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestMessage'
-        '401':
+                $ref: "#/components/schemas/RequestMessage"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
 
@@ -234,9 +234,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Selection'
+              $ref: "#/components/schemas/Selection"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
@@ -244,8 +244,8 @@ paths:
                 oneOf:
                   - type: array
                     items:
-                      $ref: '#/components/schemas/SelectionResponseSlice'
-                  - $ref: '#/components/schemas/RequestError'
+                      $ref: "#/components/schemas/SelectionResponseSlice"
+                  - $ref: "#/components/schemas/RequestError"
 
   /annot/{annot_index}/comments:
     parameters:
@@ -259,14 +259,14 @@ paths:
       summary: Get all comments for a label
       description: Get all comments for a label
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Comment'
+                  $ref: "#/components/schemas/Comment"
     post:
       summary: Submit a comment for a label
       description: Submit a comment for a label
@@ -274,20 +274,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CommentData'
+              $ref: "#/components/schemas/CommentData"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestMessage'
-        '401':
+                $ref: "#/components/schemas/RequestMessage"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
 
@@ -311,46 +311,46 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CommentData'
+              $ref: "#/components/schemas/CommentData"
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestMessage'
-        '401':
+                $ref: "#/components/schemas/RequestMessage"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
-        '403':
+                $ref: "#/components/schemas/HTTPException"
+        "403":
           description: Forbidden
       security:
         - OAuth2: []
-    
+
     delete:
       summary: Delete a comment for a label
       description: Delete a comment for a label
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestMessage'
-        '401':
+                $ref: "#/components/schemas/RequestMessage"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
-        '403':
+                $ref: "#/components/schemas/HTTPException"
+        "403":
           description: Forbidden
       security:
         - OAuth2: []
-  
+
   /record/{record_id}:
     delete:
       summary: Delete a label
@@ -362,18 +362,18 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RequestMessage'
-        '401':
+                $ref: "#/components/schemas/RequestMessage"
+        "401":
           description: Unauthorized
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HTTPException'
+                $ref: "#/components/schemas/HTTPException"
       security:
         - OAuth2: []
 
@@ -402,7 +402,7 @@ components:
       properties:
         error:
           type: string
-    
+
     User:
       type: object
       properties:
@@ -463,7 +463,7 @@ components:
           type: string
         username:
           type: string
-    
+
     Label:
       type: object
       properties:
@@ -499,7 +499,7 @@ components:
           type: integer
         from_summary:
           type: boolean
-    
+
     SelectionResponseSlice:
       type: object
       properties:
