# utils/types.ts
@@ -1,13 +1,13 @@
-export type Task = {
+export interface Task {
   doc: string
   sum: string
 }
 
-export type AllTasksLength = {
+export interface AllTasksLength {
   all: number
 }
 
-export type LabelRequest = {
+export interface LabelRequest {
   summary_start: number
   summary_end: number
   source_start: number
@@ -16,13 +16,13 @@ export type LabelRequest = {
   note: string
 }
 
-export type SelectionRequest = {
+export interface SelectionRequest {
   start: number
   end: number
   from_summary: boolean
 }
 
-export type SectionResponseSlice = {
+export interface SectionResponseSlice {
   score: number
   offset: number
   len: number
@@ -31,7 +31,7 @@ export type SectionResponseSlice = {
 
 export type SectionResponse = SectionResponseSlice[]
 
-export type ServerSection = {
+export interface ServerSection {
   score: number
   offset: number
   len: number
@@ -55,7 +55,7 @@ export function mixedToBoolean(checked: "mixed" | boolean): boolean {
   return checked
 }
 
-export type RequestError = {
+export interface RequestError {
   error: string
 }
 
@@ -64,14 +64,14 @@ export function isRequestError(obj: any): obj is RequestError {
 }
 
 export function handleRequestError(e: RequestError) {
-  throw Error(e.error)
+  throw new Error(e.error)
 }
 
-export type Normal = {
+export interface Normal {
   message: string
 }
 
-export type LabelData = {
+export interface LabelData {
   record_id: string
   sample_id: string
   summary_start: number
@@ -81,17 +81,17 @@ export type LabelData = {
   consistent: string[]
   task_index: number
   user_id: string
-  note: string,
-  username?: string,
+  note: string
+  username?: string
 }
 
-export type User = {
+export interface User {
   id: string
   name: string
   email: string
 }
 
-export type Comment = {
+export interface Comment {
   comment_id: number
   user_id: string
   username: string
@@ -101,13 +101,13 @@ export type Comment = {
   comment_time: string
 }
 
-export type CommentData = {
+export interface CommentData {
   annot_id: number
   parent_id: number | null
   text: string
 }
 
-export function isNumber(value: unknown)  {
+export function isNumber(value: unknown) {
   return typeof value === "number" && !Number.isNaN(value)
 }
 
